# CleanCodeZap

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
backup_example_project_20250627_014730/: messy_code.py  requirements.txt
cleancodezap/: __init__.py  cli.py  core.py  utils.py
cleancodezap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
example_project/: messy_code.py
tests/: __init__.py  test_core.py
